# cmake-platforms

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
android/: .gitignore  build.gradle.kts  settings.gradle
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
app/: CMakeLists.txt  main.cpp
app/hello-triangle/: CMakeLists.txt  main.cpp
cmake/: build-apk.cmake
cmake/compiler/: android-ndk.json  clang.json  emcc.json  gcc.json  homebrew-clang.json  msvc.json
cmake/config/: binaryDir.json  ninja.json
cmake/host/: arm64-macos.json  x64-linux.json
cmake/platform/: android.json  linux.json  macos.json  wasm.json  windows.json
